Feature: Fully featured embedded combat power editor that can handle the fact that the copies are not full items with inheiritance chains.

--- a/templates/item/embedded-combat-powers.hbs
+++ b/templates/item/embedded-combat-powers.hbs
@@ -35,11 +35,11 @@
               </div>
               <div class="erps-items-panel__cell erps-items-panel__cell--controls">
                 <a
-                  class="erps-items-panel__control erps-items-panel__control--view"
-                  data-action="viewDoc"
-                  title="{{localize 'EVENTIDE_RP_SYSTEM.UI.View'}} ({{localize 'EVENTIDE_RP_SYSTEM.UI.ReadOnly'}})"
+                  class="erps-items-panel__control erps-items-panel__control--edit"
+                  data-action="editEmbeddedPower"
+                  title="{{localize 'EVENTIDE_RP_SYSTEM.UI.Edit'}}"
                 >
-                  <i class="fas fa-eye"></i>
+                  <i class="fas fa-edit"></i>
                 </a>
                 <a
                   class="erps-items-panel__control erps-items-panel__control--delete"
@@ -63,7 +63,6 @@
 
       <div class="erps-items-panel__notes">
         <p>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Notes"}}</p>
-        <p><em>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ReadOnlyNote"}}</em></p>
         <p><strong>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.DragNote"}}</strong></p>
       </div>
     </div>
