--- a/templates/item/description.hbs
+++ b/templates/item/description.hbs
@@ -5,16 +5,28 @@
   data-tab='description'
 >
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
-  {{#if editable}} 
-    <prose-mirror 
-      name="system.description" 
-      data-document-u-u-i-d="{{item.uuid}}" 
-      value="{{system.description}}" 
-      collaborate="true" 
-      toggled="true"
-    >
-      {{{enrichedDescription}}}
-    </prose-mirror>
-  {{else}} {{{enrichedDescription}}}
+  {{#if editable}}
+    {{#if isEmbedded}}
+      {{!-- Embedded combat powers CANNOT be in collaboration mode. --}}
+      <prose-mirror
+        name="system.description"
+        value="{{system.description}}"
+        toggled="true"
+      >
+        {{{enrichedDescription}}}
+      </prose-mirror>
+    {{else}}
+      <prose-mirror
+        name="system.description"
+        data-document-u-u-i-d="{{item.uuid}}"
+        value="{{system.description}}"
+        collaborate="true"
+        toggled="true"
+      >
+        {{{enrichedDescription}}}
+      </prose-mirror>
+    {{/if}}
+  {{else}}
+    {{{enrichedDescription}}}
   {{/if}}
 </section>
